# mva_backend

./: .gitignore  README.md  backup.json  integration_fixture.json  manage.py  pyproject.toml
apps/api/: permissions.py  urls.py
apps/core/: admin.py  filters.py  mixins.py  models.py  utils.py
apps/core/api/: serializers.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_potentialfranchise.py  0003_alter_potentialfranchise_experience_and_more.py  0004_alter_potentialfranchise_budget.py  0005_alter_potentialfranchise_budget_and_more.py  0006_remove_potentialfranchise_experience_and_more.py  0007_alter_potentialfranchise_candidate_type_and_more.py  0008_contact_alter_potentialfranchise_phone.py
apps/core/templates/: test.html
apps/integration/: admin.py  models.py
apps/integration/api/: serializers.py  urls.py  views.py
apps/integration/migrations/: 0001_initial.py  0002_alter_mainscreenfeature_block.py  0003_alter_reviewcard_section.py  0004_imageblock_titledescriptionblock_and_more.py  0005_remove_contactpage_background_image_and_more.py  0006_tag_blogpage_article.py  0007_remove_article_why_chose_us_section_and_more.py  0008_article_blog.py  0009_alter_article_blog.py  0010_alter_mainscreenfeature_icon.py  0011_alter_card_icon_alter_mainscreenfeature_icon_and_more.py  0012_youtubefeedsection_duration.py  0013_remove_youtubefeedsection_duration_and_more.py  0014_blogpage_banner_section.py  0015_article_parsed_text.py  0016_alter_article_plan.py  0017_faqalternativeitem.py  0018_alter_titresection_text.py  0019_alter_titresection_text.py  0020_politicspage_mentionpage_cookiespage.py  0021_alter_titresection_text.py  (+6 more)
apps/users/: admin.py  models.py
mva_proj/: asgi.py  celery.py  defs.py  email_tools.py  middleware.py  settings.py  shared_mixins.py  storages.py  urls.py  utils.py  wsgi.py
(+8 files in other folders)
